fix: jumbotron mobile size

--- a/src/components/ui/jumbotron/Jumbotron.css
+++ b/src/components/ui/jumbotron/Jumbotron.css
@@ -33,6 +33,7 @@
     font-size: 1.2rem;
   }
 
+  .jumbotron,
   .jumbotron__image {
     height: 35vh;
   }
